Fix Hover effect jumpyness #2115

--- a/assets/css/give-admin-rtl.css
+++ b/assets/css/give-admin-rtl.css
@@ -1081,7 +1081,7 @@ ASIDE
       padding: 0; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-remove {
       float: left;
-      width: 22px;
+      width: 30px;
       height: 36px;
       padding: 0;
       display: block;
@@ -1090,6 +1090,14 @@ ASIDE
       font-size: 21px;
       font-weight: 300;
       cursor: pointer; }
+    #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-remove:hover {
+      background-color: red;
+      color: white;
+      width: 30px;
+      height: 30px;
+      border-radius: 30px;
+      margin-top: 3px;
+      line-height: 28px; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-row-head {
       border-bottom: 1px solid #eee;
       cursor: move; }
