--- a/assets/scss/admin/forms.scss
+++ b/assets/scss/admin/forms.scss
@@ -497,7 +497,7 @@ ASIDE
 
 			.give-remove {
 				float: right;
-				width: 22px;
+				width: 30px;
 				height: 36px;
 				padding: 0;
 				display: block;
@@ -506,6 +506,16 @@ ASIDE
 				font-size: 21px;
 				font-weight: 300;
 				cursor: pointer;
+			}
+
+			.give-remove:hover {
+				background-color: red;
+				color: white;
+				width: 30px;
+				height: 30px;
+				border-radius: 30px;
+				margin-top: 3px;
+				line-height: 28px;
 			}
 
 			.give-row-head {
